--- a/QuizGame/KwisspelRenewed/KwisspelRenewed.csproj
+++ b/QuizGame/KwisspelRenewed/KwisspelRenewed.csproj
@@ -88,8 +88,10 @@
     <Compile Include="Model\Context.cs" />
     <Compile Include="Model\DummyQuestionRepository.cs" />
     <Compile Include="Model\IAnswerRepository.cs" />
+    <Compile Include="Model\IThemeRepository.cs" />
     <Compile Include="Model\IQuestionRepository.cs" />
     <Compile Include="Model\Question.cs" />
+    <Compile Include="Model\QuizTheme.cs" />
     <Compile Include="QuizCRUD.xaml.cs">
       <DependentUpon>QuizCRUD.xaml</DependentUpon>
     </Compile>
